samples/_failures_safe/1761548915_a4bfb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9449773.c: In function ‘main’:
./samples/SAFE/__tmp_d9449773.c:124:13: error: expected expression at end of input
  124 |             found_warning =
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d9449773.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9449773.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9449773.c:124:13: error: expected declaration or statement at end of input
